--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,6 @@ add_compile_definitions(DONT_SET_USING_JUCE_NAMESPACE)
 #list(APPEND CMAKE_PREFIX_PATH "/home/edgallyot/JUCE/install")
 
 
-
 find_package(JUCE CONFIG REQUIRED)        # If you've installed JUCE to your system
 # or
 #MAC
@@ -49,21 +48,21 @@ find_package(JUCE CONFIG REQUIRED)        # If you've installed JUCE to your sys
 # Check the readme at `docs/CMake API.md` in the JUCE repo for the full list.
 
 juce_add_plugin(${projectName}
-    # VERSION ...                               # Set this if the plugin version is different to the project version
-    # ICON_BIG ...                              # ICON_* arguments specify a path to an image file to use as an icon for the Standalone
-    # ICON_SMALL ...
-    # COMPANY_NAME ...                          # Specify the name of the plugin's author
-    # IS_SYNTH TRUE/FALSE                       # Is this a synth or an effect?
-    # NEEDS_MIDI_INPUT TRUE/FALSE               # Does the plugin need midi input?
-    # NEEDS_MIDI_OUTPUT TRUE/FALSE              # Does the plugin need midi output?
-    # IS_MIDI_EFFECT TRUE/FALSE                 # Is this plugin a MIDI effect?
-    # EDITOR_WANTS_KEYBOARD_FOCUS TRUE/FALSE    # Does the editor need keyboard focus?
-    # COPY_PLUGIN_AFTER_BUILD TRUE/FALSE        # Should the plugin be installed to a default location after building?
-    PLUGIN_MANUFACTURER_CODE Juce               # A four-character manufacturer id with at least one upper-case character
-    PLUGIN_CODE Dem0                            # A unique four-character plugin id with exactly one upper-case character
-                                                # GarageBand 10.3 requires the first letter to be upper-case, and the remaining letters to be lower-case
-    FORMATS AU VST3 Standalone                  # The formats to build. Other valid formats are: AAX Unity VST AU AUv3
-    PRODUCT_NAME "${projectName}")        # The name of the final executable, which can differ from the target name
+        # VERSION ...                               # Set this if the plugin version is different to the project version
+        # ICON_BIG ...                              # ICON_* arguments specify a path to an image file to use as an icon for the Standalone
+        # ICON_SMALL ...
+        # COMPANY_NAME ...                          # Specify the name of the plugin's author
+        # IS_SYNTH TRUE/FALSE                       # Is this a synth or an effect?
+        # NEEDS_MIDI_INPUT TRUE/FALSE               # Does the plugin need midi input?
+        # NEEDS_MIDI_OUTPUT TRUE/FALSE              # Does the plugin need midi output?
+        # IS_MIDI_EFFECT TRUE/FALSE                 # Is this plugin a MIDI effect?
+        # EDITOR_WANTS_KEYBOARD_FOCUS TRUE/FALSE    # Does the editor need keyboard focus?
+        # COPY_PLUGIN_AFTER_BUILD TRUE/FALSE        # Should the plugin be installed to a default location after building?
+        PLUGIN_MANUFACTURER_CODE Juce               # A four-character manufacturer id with at least one upper-case character
+        PLUGIN_CODE DTED                            # A unique four-character plugin id with exactly one upper-case character
+        # GarageBand 10.3 requires the first letter to be upper-case, and the remaining letters to be lower-case
+        FORMATS AU VST3 Standalone                  # The formats to build. Other valid formats are: AAX Unity VST AU AUv3
+        PRODUCT_NAME "${projectName}")        # The name of the final executable, which can differ from the target name
 
 # `juce_generate_juce_header` will create a JuceHeader.h for a given target, which will be generated
 # into your build tree. This should be included with `#include <JuceHeader.h>`. The include path for
@@ -80,9 +79,11 @@ juce_generate_juce_header(${projectName})
 # Are the cmake lists changes happening?
 
 target_sources(${projectName}
-    PRIVATE
-        PluginEditor.cpp
-        PluginProcessor.cpp
+        PRIVATE
+        BaseProcessor.h
+        BaseProcessor.cpp
+        DistortEdEditor.cpp
+        DistortEdProcessor.cpp
         DistortEdSlider.cpp
         DistortEdSlider.h
         DriveSlider.cpp
@@ -92,7 +93,12 @@ target_sources(${projectName}
         ToneSlider.cpp
         ToneSlider.h
         SliderBank.cpp
-        SliderBank.h)
+        SliderBank.h
+        DistortEdAlias.h
+        VolumeModule.cpp
+        VolumeModule.h
+        BaseModule.cpp
+        BaseModule.h)
 
 # `target_compile_definitions` adds some preprocessor definitions to our target. In a Projucer
 # project, these might be passed in the 'Preprocessor Definitions' field. JUCE modules also make use
@@ -102,7 +108,7 @@ target_sources(${projectName}
 # definitions, pick unique names that are unlikely to collide! This is a standard CMake command.
 
 target_compile_definitions(${projectName}
-    PUBLIC
+        PUBLIC
         # JUCE_WEB_BROWSER and JUCE_USE_CURL would be on by default, but you might not need them.
         JUCE_WEB_BROWSER=0  # If you remove this, add `NEEDS_WEB_BROWSER TRUE` to the `juce_add_plugin` call
         JUCE_USE_CURL=0     # If you remove this, add `NEEDS_CURL TRUE` to the `juce_add_plugin` call
@@ -124,10 +130,10 @@ target_compile_definitions(${projectName}
 # here too. This is a standard CMake command.
 
 target_link_libraries(${projectName}
-    PRIVATE
+        PRIVATE
         # AudioPluginData           # If we'd created a binary data target, we'd link to it here
         juce::juce_audio_utils
-    PUBLIC
+        PUBLIC
         juce::juce_recommended_config_flags
         juce::juce_recommended_lto_flags
         juce::juce_recommended_warning_flags)
